# ROS2-RPI-Playground

./: .gitignore  Dockerfile  README.md  helloWorld
HelloWorld/: HelloWorld  a.out  helloWorld  helloWorld.cpp
RPI_led/install/: local_setup.sh  setup.sh
RPI_led/log/: latest_build  latest_list
RPI_led/src/gpio_control/: CMakeLists.txt
RPI_led/src/gpio_control/src/: gpio_listener.cpp  gpio_talker.cpp
RPI_led/test/: a.out  test.cpp
RPI_led_service/install/: local_setup.sh  setup.sh
RPI_led_service/log/: latest_build  latest_list
RPI_led_service/src/rpi_LCD_control/: setup.cfg  setup.py
RPI_led_service/src/rpi_LCD_control/scripts/: displayclient.py
RPI_led_service/src/rpi_gpio/: CMakeLists.txt  package.xml
RPI_led_service/src/rpi_gpio/launch/: my_nodes.launch.py
RPI_led_service/src/rpi_gpio/src/: client.cpp  displayclient.py  server.cpp
RPI_led_service/src/rpi_gpio_msgs/: CMakeLists.txt
RPI_led_service/src/rpi_gpio_msgs/srv/: LEDToggle.srv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gpio_control/lib/gpio_control/: gpio_talker
install/gpio_control/share/gpio_control/: local_setup.sh  package.sh  package.zsh
install/rpi_gpio/lib/rpi_gpio/: gpio_client  gpio_server
install/rpi_gpio/share/rpi_gpio/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
log/: latest_build
test/: a.out  display.py  prin.cpp  prin.py  readme  test.cpp
test/merge/: a.out  display1.py  test1.cpp
test/subprocess_test/: a.out  simpleChoice.cpp  subproc.py
(+62 files in other folders)
